feat/introduce new model

--- a/visualization_chip.ipynb
+++ b/visualization_chip.ipynb
@@ -136,7 +136,7 @@
    "source": [
     "\n",
     "# Load and preprocess the input image\n",
-    "img_path = 'image_v2.png'\n",
+    "img_path = 'example/chip_image_v2.png'\n",
     "transform = transforms.Compose([\n",
     "    transforms.Resize((500, 500)),\n",
     "    transforms.ToTensor()\n",
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "8a31eb2e",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
     }
    ],
    "source": [
-    "img_path = \"image_v2.png\"\n",
+    "img_path = \"example/chip_image_v2.png\"\n",
     "pil_image = Image.open(img_path).convert(\"RGB\")\n",
     "\n",
     "def detect_faulty_sample(size=500):\n",
