--- a/dataprep_chip.ipynb
+++ b/dataprep_chip.ipynb
@@ -563,13 +563,13 @@
     "\n",
     "plt.tight_layout(pad=0)\n",
     "plt.subplots_adjust(left=0, right=1, top=1, bottom=0)\n",
-    "plt.savefig('image_v2.png', dpi=300, bbox_inches='tight', pad_inches=0)\n",
+    "plt.savefig('example/chip_image_v2.png', dpi=300, bbox_inches='tight', pad_inches=0)\n",
     "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "3b4a0e6d",
    "metadata": {},
    "outputs": [
@@ -822,7 +822,7 @@
     "\n",
     "plt.tight_layout(pad=0)\n",
     "plt.subplots_adjust(left=0, right=1, top=1, bottom=0)\n",
-    "plt.savefig('image_v2.png', dpi=300, bbox_inches='tight', pad_inches=0)\n",
+    "plt.savefig('example/chip_image_v2.png', dpi=300, bbox_inches='tight', pad_inches=0)\n",
     "plt.show()\n"
    ]
   },
