--- a/visualization_us.ipynb
+++ b/visualization_us.ipynb
@@ -86,7 +86,7 @@
    ],
    "source": [
     "# Recur same operations\n",
-    "img_path = \"example/ultrasoung.JPG\" # Random image\n",
+    "img_path = \"example/ultrasound.JPG\" # Random image\n",
     "\n",
     "transform = transforms.Compose([\n",
     "    transforms.Resize((224,224)),\n",
