--- a/visualization_chip.ipynb
+++ b/visualization_chip.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c92649bb",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,11 @@
     "import torch.nn as nn\n",
     "from torchvision import transforms\n",
     "from PIL import Image\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import os\n",
+    "import random\n",
+    "import shutil\n"
    ]
   },
   {
@@ -118,6 +122,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "a95c0885",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random ultrasound selected: 1265.JPG\n",
+      "Saved to: example/ultrasound.JPG\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Randomly pick the ultrasound image\n",
+    "\n",
+    "dataset_path = \"dataset/KaggleUltrasound/images\"\n",
+    "save_path = \"example/ultrasound.JPG\"\n",
+    "all_images = [f for f in os.listdir(dataset_path) if f.lower().endswith((\".jpg\", \".jpeg\", \".png\"))]\n",
+    "random_image = random.choice(all_images)\n",
+    "source_path = os.path.join(dataset_path, random_image)\n",
+    "shutil.copy(source_path, save_path)\n",
+    "\n",
+    "print(f\"Random ultrasound selected: {random_image}\")\n",
+    "print(f\"Saved to: {save_path}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "91682f7f",
    "metadata": {},
@@ -134,7 +167,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Load and preprocess the input image\n",
     "img_path = 'example/chip_image_v2.png'\n",
     "transform = transforms.Compose([\n",
