fix/minor device loc fixes

--- a/visualization_chip.ipynb
+++ b/visualization_chip.ipynb
@@ -112,11 +112,11 @@
     "# Load trained model\n",
     "if menopause:\n",
     "    model = CancerDetectionCNN()\n",
-    "    model.load_state_dict(torch.load('model_archives/CustomChip/cancer_detection_model_post.pth'))\n",
+    "    model.load_state_dict(torch.load('model_archives/CustomChip/cancer_detection_model_post.pth', map_location=\"cpu\"))\n",
     "    model.eval()\n",
     "else:\n",
     "    model = CancerDetectionCNN()\n",
-    "    model.load_state_dict(torch.load('model_archives/CustomChip/cancer_detection_model_pre.pth'))\n",
+    "    model.load_state_dict(torch.load('model_archives/CustomChip/cancer_detection_model_pre.pth',map_location=\"cpu\"))\n",
     "    model.eval()"
    ]
   },
